# Results-Transferability

./: README.md
Experiment 1/Control software/BT Maple/: bt_epuck_aggregation_bt.txt  bt_epuck_foraging_bt.txt  bt_epuck_gridexploration_bt.txt  bt_mercator_aggregation_bt.txt  bt_mercator_foraging_bt.txt  bt_mercator_gridexploration_bt.txt
Experiment 1/Control software/FSM Chocolate/: fsm_epuck_aggregation.txt  fsm_epuck_foraging.txt  fsm_epuck_gridexploration.txt  fsm_mercator_aggregation.txt  fsm_mercator_foraging.txt  fsm_mercator_gridexploration.txt
Experiment 1/Loop-functions/E-puck/: CMakeLists.txt  ChocolateAACLoopFunc.cpp  ChocolateAACLoopFunc.h  ForagingTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.h  GridExplorationLoopFunc.cpp  GridExplorationLoopFunc.h
Experiment 1/Loop-functions/Mercator/: CMakeLists.txt  ChocolateGiantAACLoopFunc.cpp  ChocolateGiantAACLoopFunc.h  GiantForagingTwoSpotsLoopFunc.cpp  GiantForagingTwoSpotsLoopFunc.h  GiantGridExplorationLoopFunc.cpp  GiantGridExplorationLoopFunc.h
Experiment 1/Missions/Pseudo-reality/: psr_aggregation_epuck.argos  psr_aggregation_epuck_bt.argos  psr_aggregation_epuck_genomes.argos  psr_aggregation_rvr.argos  psr_aggregation_rvr_bt.argos  psr_aggregation_rvr_genomes.argos  psr_foraging_epuck.argos  psr_foraging_epuck_bt.argos  psr_foraging_epuck_genomes.argos  psr_foraging_mercator.argos  (+8 more)
Experiment 2/Missions/: aggregation_epuck.argos  aggregation_epuck_evo.argos  aggregation_mercator.argos  aggregation_mercator_evo.argos  foraging_epuck.argos  foraging_epuck_evo.argos  foraging_mercator.argos  foraging_mercator_evo.argos  gridexploration_epuck.argos  gridexploration_epuck_evo.argos  gridexploration_mercator.argos  gridexploration_mercator_evo.argos
(+330 files in other folders)
